@@ -54,3 +54,5 @@
 
  - Upgrade demo to pro
 	- Also upgrade all packages
+
+ - fix alias follow mode on install
